@@ -1,19 +1,20 @@
 package site.petful.campaignservice.service;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.stereotype.Service;;
+import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import site.petful.campaignservice.client.AdvertiserFeignClient;
+import site.petful.campaignservice.client.PetFeignClient;
+import site.petful.campaignservice.common.ApiResponse;
 import site.petful.campaignservice.common.ErrorCode;
+import site.petful.campaignservice.dto.advertisement.AdResponse;
 import site.petful.campaignservice.dto.campaign.ApplicantResponse;
-import site.petful.campaignservice.dto.campaign.ApplicantsResponse;
 import site.petful.campaignservice.dto.campaign.ApplicantRequest;
-import site.petful.campaignservice.dto.campaign.PetResponse;
+import site.petful.campaignservice.dto.PetResponse;
+import site.petful.campaignservice.dto.campaign.ApplicantsResponse;
 import site.petful.campaignservice.entity.Applicant;
 import site.petful.campaignservice.entity.ApplicantStatus;
-import site.petful.campaignservice.entity.advertisement.Advertisement;
-import site.petful.campaignservice.repository.AdRepository;
 import site.petful.campaignservice.repository.CampaignRepository;
-import site.petful.campaignservice.repository.PetRepository;
 
 import java.util.List;
 import java.util.Map;
@@ -21,47 +22,54 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class CampaignService {
 
     public final CampaignRepository campaignRepository;
-    public final AdRepository adRepository;
     private final AdvertiserFeignClient advertiserFeignClient;
-    private final PetRepository petRepository;
+    private final PetFeignClient petFeignClient;
 
     // 1. 체험단 신청
     public ApplicantResponse applyCampaign(Long adNo, Long petNo, ApplicantRequest request) {
 
-        Advertisement ad = adRepository.findByAdNo(adNo)
-                .orElseThrow(() -> new RuntimeException(ErrorCode.AD_NOT_FOUND.getDefaultMessage()));
+        ApiResponse<AdResponse> adResponse = advertiserFeignClient.getAd(adNo);
+        if (adResponse == null || adResponse.getData() == null) {
+            throw new RuntimeException(ErrorCode.AD_NOT_FOUND.getDefaultMessage());
+        }
+
+        ApiResponse<PetResponse> petResponse = petFeignClient.getPet(petNo);
+        PetResponse pet = petResponse.getData();
 
         Applicant applicant = new Applicant();
-        applicant.setAdvertisement(ad);
+        applicant.setAdNo(adNo);
         applicant.setPetNo(petNo);
         applicant.setContent(request.getContent());
         applicant.setStatus(applicant.getStatus() == null ? ApplicantStatus.APPLIED : applicant.getStatus());
         Applicant saved = campaignRepository.save(applicant);
 
-        PetResponse petResponse = petRepository.findByPetNo(petNo);
-
         // advertiser의 applicants 1 증가
-        advertiserFeignClient.updateAdByCampaign(adNo);
+        advertiserFeignClient.updateAdByCampaign(adNo, 1);
 
-        return ApplicantResponse.from(saved, petResponse);
+        return ApplicantResponse.from(saved, pet);
     }
 
     // 2. 광고별 체험단 전체 조회 - 광고주
+    @Transactional(readOnly = true)
     public ApplicantsResponse getApplicants(Long adNo) {
-        Advertisement ad = adRepository.findByAdNo(adNo)
-                .orElseThrow(() -> new RuntimeException(ErrorCode.AD_NOT_FOUND.getDefaultMessage()));
+        ApiResponse<AdResponse> adResponse = advertiserFeignClient.getAd(adNo);
+        if (adResponse == null || adResponse.getData() == null) {
+            throw new RuntimeException(ErrorCode.AD_NOT_FOUND.getDefaultMessage());
+        }
 
-        List<Applicant> applicants = campaignRepository.findByAdvertisement_AdNo(adNo);
+        List<Applicant> applicants = campaignRepository.findByAdNo(adNo);
 
         List<Long> petNos = applicants.stream()
                 .map(Applicant::getPetNo)
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
-        List<PetResponse> pets = petRepository.findByPetNos(petNos);
+        List<PetResponse> pets = petFeignClient.getPetsByPetNos(petNos).getData();
+
         Map<Long, PetResponse> petMap = pets.stream()
                 .collect(Collectors.toMap(PetResponse::getPetNo, pet -> pet));
 
@@ -70,6 +78,42 @@ public class CampaignService {
                 .collect(Collectors.toList());
 
         return ApplicantsResponse.from(applicantResponses);
+    }
+
+    // 2-2. petNo로 체험단 신청 내역 조회
+    public ApplicantsResponse getApplicantsByPetNo(Long petNo) {
+        ApiResponse<PetResponse> petResponse = petFeignClient.getPet(petNo);
+        if (petResponse == null || petResponse.getData() == null) {
+            throw new RuntimeException(ErrorCode.AD_NOT_FOUND.getDefaultMessage());
+        }
+
+        List<Applicant> applicants = campaignRepository.findByPetNo(petNo);
+
+        List<ApplicantResponse> applicantResponses = applicants.stream()
+                .map(applicant -> ApplicantResponse.from(applicant, petResponse.getData()))
+                .collect(Collectors.toList());
+
+        return ApplicantsResponse.from(applicantResponses);
+    }
+
+    // 2-3. 광고 + 사용자별 신청자 조회
+    public List<ApplicantResponse> getApplicantsByAd(Long userNo, Long adNo) {
+        List<Applicant> applicants = campaignRepository.findByAdNo(adNo);
+        List<PetResponse> petResponses = petFeignClient.getPetsExternal(userNo).getData();
+        List<Long> petNos = petResponses.stream().map(PetResponse::getPetNo).toList();
+
+        List<Applicant> filteredApplicants = applicants.stream()
+                .filter(applicant -> petNos.contains(applicant.getPetNo())).toList();
+
+        return filteredApplicants.stream()
+                .map(applicant -> {
+                    PetResponse pet = petResponses.stream()
+                            .filter(p -> p.getPetNo().equals(applicant.getPetNo()))
+                            .findFirst()
+                            .orElse(null);
+                    return ApplicantResponse.from(applicant, pet);
+                })
+                .collect(Collectors.toList());
     }
 
     // 3-1. 체험단 추가 내용 수정 - 체험단
@@ -81,9 +125,10 @@ public class CampaignService {
         applicant.setContent(request.getContent());
         Applicant saved = campaignRepository.save(applicant);
 
-        PetResponse petResponse = petRepository.findByPetNo(saved.getPetNo());
+        ApiResponse<PetResponse> petResponse = petFeignClient.getPet(saved.getPetNo());
+        PetResponse pet = petResponse.getData();
 
-        return ApplicantResponse.from(saved, petResponse);
+        return ApplicantResponse.from(saved, pet);
     }
 
 
@@ -96,9 +141,10 @@ public class CampaignService {
         applicant.setStatus(status);
         Applicant saved = campaignRepository.save(applicant);
 
-        PetResponse petResponse = petRepository.findByPetNo(saved.getPetNo());
+        ApiResponse<PetResponse> petResponse = petFeignClient.getPet(saved.getPetNo());
+        PetResponse pet = petResponse.getData();
 
-        return ApplicantResponse.from(saved, petResponse);
+        return ApplicantResponse.from(saved, pet);
     }
 
     // 4. 체험단 신청 취소(삭제)
@@ -108,5 +154,9 @@ public class CampaignService {
                 .orElseThrow(() -> new RuntimeException(ErrorCode.APPLICANT_NOT_FOUND.getDefaultMessage()));
 
         campaignRepository.delete(applicant);
+
+        // advertiser의 applicants 1 감소
+        advertiserFeignClient.updateAdByCampaign(applicant.getAdNo(), -1);
     }
+
 }
